--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,11 +3,11 @@ name: "Release"
 
 on:
   push:
-    branches:
-      - master
+    tags:
+      - "v*"
 
 jobs:
-  pre-release:
+  release:
     name: "Pre Release"
     runs-on: "ubuntu-latest"
     strategy:
@@ -39,7 +39,5 @@ jobs:
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
-          prerelease: true
-          title: "Development Build"
           files: |
             bin/vendor-prune.phar
