fix: set correct file name on pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install Box
         run: |
           curl -L -o box.phar https://github.com/humbug/box/releases/download/3.0.0-RC.0/box.phar
-          chmod +x ./box.ohar
+          chmod +x ./box.phar
 
       - name: Compile
         run: php -d phar.readonly=0 box.phar compile
